Bug 512665 - Crash with SIGABRT
Summary: Crash with SIGABRT
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-27 08:11 UTC by Paul Menzel
Modified: 2025-11-30 13:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Menzel 2025-11-27 08:11:00 UTC
Debian sid/unstable with *kmymoney* 5.2.1-2

In the past transactions, I (accidently) clicked on the line between two transactions, and the program crashed.

```
7:2025-11-26 09:40:06:aqhbci stopped
KMyMoneyPlugin::KMMStatementInterface::import start
Importing statement for  ""
Processing transactions ()
Processing transactions done ()
Importing statement for '' done
Rollback transaction with now 5 commands on stack at index 5
Rolled back transaction with now 5 commands on stack at index 4
No selections
current selection
OnlineJobs: QList("O000213")
current selection
OnlineJobs: QList("O000221")
No selections
terminate called after throwing an instance of 'onlineJob::emptyTask'
  what():  Requested onlineTask of onlineJob without any task. ./kmymoney/mymoney/onlinejob.cpp:95
KCrash: appFilePath points to nullptr!
KCrash: Application '<unknown>' crashing... crashRecursionCounter = 2
```

```
(gdb) bt
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at ./nptl/pthread_kill.c:44
#1  0x00007f4bc1f0c9ff in __pthread_kill_internal (threadid=<optimized out>, signo=6) at ./nptl/pthread_kill.c:89
#2  0x00007f4bc1eb7cc2 in __GI_raise (sig=6) at ../sysdeps/posix/raise.c:26
#3  0x00007f4bc4ad8762 in KCrash::defaultCrashHandler(int) () at /lib/x86_64-linux-gnu/libKF6Crash.so.6
#4  0x00007f4bc1eb7df0 in <signal handler called> () at /lib/x86_64-linux-gnu/libc.so.6
#5  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at ./nptl/pthread_kill.c:44
#6  0x00007f4bc1f0c9ff in __pthread_kill_internal (threadid=<optimized out>, signo=6) at ./nptl/pthread_kill.c:89
#7  0x00007f4bc1eb7cc2 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#8  0x00007f4bc1ea04ac in __GI_abort () at ./stdlib/abort.c:73
#9  0x00007f4bc1ca6aa4 in ??? () at /lib/x86_64-linux-gnu/libstdc++.so.6
#10 0x00007f4bc1cb915a in ??? () at /lib/x86_64-linux-gnu/libstdc++.so.6
#11 0x00007f4bc1ca662e in std::terminate() () at /lib/x86_64-linux-gnu/libstdc++.so.6
#12 0x00007f4bc1cb93f8 in __cxa_throw () at /lib/x86_64-linux-gnu/libstdc++.so.6
#13 0x00007f4bc48756ac in onlineJob::task (this=this@entry=0x7ffc777d09e0) at ./kmymoney/mymoney/onlinejob.cpp:95
#14 0x00007f4b8d06bf21 in onlineJobTyped<creditTransfer>::onlineJobTyped (this=0x7ffc777d09e0, other=...) at ./kmymoney/mymoney/onlinejobtyped.h:116
#15 KOnlineJobOutboxViewPrivate::editJob (this=0x559e68526010, job=...) at ./kmymoney/plugins/views/onlinejoboutbox/konlinejoboutboxview.cpp:148
#16 KOnlineJobOutboxViewPrivate::editJob (this=this@entry=0x559e68526010, jobId=...) at ./kmymoney/plugins/views/onlinejoboutbox/konlinejoboutboxview.cpp:139
#17 0x00007f4b8d064931 in KOnlineJobOutboxView::slotEditJob (this=<optimized out>, index=...) at /usr/include/x86_64-linux-gnu/qt6/QtCore/qarraydata.h:60
#18 0x00007f4bc23ff521 in ??? () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#19 0x00007f4bc36c4a8e in QAbstractItemView::doubleClicked(QModelIndex const&) () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#20 0x00007f4bc3742bd2 in QTreeView::mouseDoubleClickEvent(QMouseEvent*) () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#21 0x00007f4bc3411c73 in QWidget::event(QEvent*) () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#22 0x00007f4bc3475802 in QFrame::event(QEvent*) () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#23 0x00007f4bc23a355a in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#24 0x00007f4bc33b9c38 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#25 0x00007f4bc33bea6f in QApplication::notify(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#26 0x00007f4bc23a6928 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#27 0x00007f4bc33b0aab in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) ()
    at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#28 0x00007f4bc3429d0b in ??? () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#29 0x00007f4bc342ce40 in ??? () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#30 0x00007f4bc33b9c48 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#31 0x00007f4bc23a6928 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#32 0x00007f4bc29f5c4d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at /lib/x86_64-linux-gnu/libQt6Gui.so.6
#33 0x00007f4bc2a53efb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib/x86_64-linux-gnu/libQt6Gui.so.6
#34 0x00007f4bc2a54100 in QWindowSystemInterface::flushWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib/x86_64-linux-gnu/libQt6Gui.so.6
#35 0x00007f4bc23f0c94 in QObject::event(QEvent*) () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#36 0x00007f4bc33b9c48 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt6Widgets.so.6
#37 0x00007f4bc23a6928 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#38 0x00007f4bc23a6b97 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#39 0x00007f4bc2607e37 in ??? () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#40 0x00007f4bc03076ae in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007f4bc030aa4f in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#42 0x00007f4bc030b1d0 in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#43 0x00007f4bc2604dc8 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#44 0x00007f4bc23afe53 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#45 0x00007f4bc23a9701 in QCoreApplication::exec() () at /lib/x86_64-linux-gnu/libQt6Core.so.6
#46 0x0000559e590c6cf7 in main (argc=<optimized out>, argv=<optimized out>) at ./kmymoney/main.cpp:283
```
Comment 1 Thomas Baumgart 2025-11-28 16:09:04 UTC
Git commit 30c9dd75cca10d006138faa94ffa7f5bc2e034f3 by Thomas Baumgart.
Committed on 28/11/2025 at 16:08.
Pushed by tbaumgart into branch 'master'.

Prevent editing online job when no id is present
FIXED-IN: 5.2.2

M  +3    -1    kmymoney/plugins/views/onlinejoboutbox/konlinejoboutboxview.cpp

https://invent.kde.org/office/kmymoney/-/commit/30c9dd75cca10d006138faa94ffa7f5bc2e034f3
Comment 2 Thomas Baumgart 2025-11-30 13:30:55 UTC
Git commit c90725ae3924425b02bca02f90e712d5893230fa by Thomas Baumgart.
Committed on 30/11/2025 at 10:19.
Pushed by tbaumgart into branch '5.2'.

Prevent editing online job when no id is present
FIXED-IN: 5.2.2
(cherry picked from commit 30c9dd75cca10d006138faa94ffa7f5bc2e034f3)

M  +3    -1    kmymoney/plugins/views/onlinejoboutbox/konlinejoboutboxview.cpp

https://invent.kde.org/office/kmymoney/-/commit/c90725ae3924425b02bca02f90e712d5893230fa