Prevent editing online job when no id is present

BUG: 512665
FIXED-IN: 5.2.2